# PSXecute

./: .clang-format  .gitignore  README.md
BOF/: CMakeLists.txt  compile.sh  extension.json  main.c
Payload/: compile.sh
Payload/aux/: linker.ld
Payload/examples/createprocess/: createprocess.c
Payload/examples/dir/: dir.c
Payload/examples/msgbox/: msgbox.c
Payload/examples/osinfo/: osinfo.c
Payload/examples/ps/: ps.c
Payload/examples/whoami/: main.c  whoami.c
Payload/src/: main.c  psxecute.h
Payload/src/launch_notepad/: main.c
Transpiler/: dllmapping.h
Transpiler/passes/: change_metadata.cpp  change_triple.cpp  dll_call_transform.cpp  remove_dll_import.cpp
VM/: CMakeLists.txt  main.cpp
VM/cpu/: Instruction.h  Opcodes.cpp  Psx.cpp  Psx.h
